[OPIK-8328] [BE] fix: fold the demo-project exclusion into Java for trace usage queries
The daily trace BI and usage-billing queries excluded demo data with an inline
`project_id NOT IN [...]` literal holding one UUID per demo project across all
workspaces. One demo project is created per signup, so that literal grows
without bound, and once `traces` is wrapped in a `Distributed` table the query
text is re-parsed per shard — the queries stopped completing inside
`max_execution_time` and the daily counts silently stopped being produced,
because the callers consuming them cannot tell an empty result from a failed
one. `GLOBAL NOT IN` is not a fix either: the literal is still in the text.

Both queries now `GROUP BY project_id` and `TraceService` drops demo projects
and re-aggregates in Java, where the demo project set already lives. The query
text becomes constant, so growth in the demo set can never reintroduce the
failure, and the `/v1/internal/usage/*` response shapes are unchanged, so
nothing outside this repo has to change with it.

Counts are preserved: `COUNT(DISTINCT id)` at project granularity sums back to
the workspace and workspace/user totals, because an id has exactly one project —
the write path rejects an upsert presenting an existing id with a different
project rather than moving it.

Also here:

- `ProjectDAO.findByGlobalNames` gains an optional id scope, and
  `ProjectService.getDemoProjectIds` uses it scoped to the projects that
  actually had traces in the window, chunked. The unscoped fetch remains only
  for the span usage paths.
- The two DAO methods that ran the same previous-day count under different log
  comments are now one.
- The `OR created_at > :demo_data_created_at` branch is dropped from the trace
  queries. The cutoff is `max(createdAt) + 1 minute`, so where demo projects are
  created continuously it is effectively now and the branch cannot match a row
  in the previous-day window. On a single install it could, so demo-project
  acti