@@ -5,7 +5,6 @@ import com.comet.opik.api.Span;
 import com.comet.opik.api.SpansCountResponse;
 import com.comet.opik.api.Trace;
 import com.comet.opik.api.TraceCountResponse;
-import com.comet.opik.api.UsageByWorkspaceProjectUserResponse;
 import com.comet.opik.api.resources.utils.AuthTestUtils;
 import com.comet.opik.api.resources.utils.ClickHouseContainerUtils;
 import com.comet.opik.api.resources.utils.ClientSupportUtils;
@@ -17,7 +16,10 @@ import com.comet.opik.api.resources.utils.TestUtils;
 import com.comet.opik.api.resources.utils.WireMockUtils;
 import com.comet.opik.api.resources.utils.resources.DatasetResourceClient;
 import com.comet.opik.api.resources.utils.resources.ExperimentResourceClient;
+import com.comet.opik.api.resources.utils.resources.UsageResourceClient;
 import com.comet.opik.domain.DemoData;
+import com.comet.opik.domain.IdGenerator;
+import com.comet.opik.domain.TestIdGeneratorFactory;
 import com.comet.opik.extensions.DropwizardAppExtensionProvider;
 import com.comet.opik.extensions.RegisterApp;
 import com.comet.opik.infrastructure.db.TransactionTemplateAsync;
@@ -25,7 +27,6 @@ import com.comet.opik.podam.PodamFactoryUtils;
 import com.redis.testcontainers.RedisContainer;
 import jakarta.ws.rs.client.Entity;
 import jakarta.ws.rs.core.HttpHeaders;
-import jakarta.ws.rs.core.Response;
 import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
@@ -34,6 +35,9 @@ import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.testcontainers.clickhouse.ClickHouseContainer;
 import org.testcontainers.containers.GenericContainer;
 import org.testcontainers.lifecycle.Startables;
@@ -44,11 +48,13 @@ import ru.vyarus.dropwizard.guice.test.jupiter.ext.TestDropwizardAppExtension;
 import ru.vyarus.guicey.jdbi3.tx.TransactionTemplate;
 import uk.co.jemos.podam.api.PodamFactory;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.function.Consumer;
 import java.util.function.Predicate;
+import java.util.stream.Stream;
 
 import static com.comet.opik.api.resources.utils.ClickHouseContainerUtils.DATABASE_NAME;
 import static com.comet.opik.infrastructure.auth.RequestContext.WORKSPACE_HEADER;
@@ -56,6 +62,8 @@ import static com.comet.opik.infrastructure.db.TransactionTemplateAsync.WRITE;
 import static java.util.concurrent.TimeUnit.SECONDS;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.awaitility.Awaitility.await;
+import static org.junit.jupiter.api.Named.named;
+import static org.junit.jupiter.params.provider.Arguments.arguments;
 
 @DisplayName("Usage Resource Test")
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
@@ -63,11 +71,12 @@ import static org.awaitility.Awaitility.await;
 @ExtendWith(DropwizardAppExtensionProvider.class)
 class UsageResourceTest {
 
-    public static final String USAGE_RESOURCE_URL_TEMPLATE = "%s/v1/internal/usage";
     public static final String TRACE_RESOURCE_URL_TEMPLATE = "%s/v1/private/traces";
     public static final String SPANS_RESOURCE_URL_TEMPLATE = "%s/v1/private/spans";
     private static final String EXPERIMENT_RESOURCE_URL_TEMPLATE = "%s/v1/private/experiments";
     private static final String DATASET_RESOURCE_URL_TEMPLATE = "%s/v1/private/datasets";
+
+    private static final IdGenerator ID_GENERATOR = TestIdGeneratorFactory.create();
 
     private final String USER = UUID.randomUUID().toString();
 
@@ -104,6 +113,7 @@ class UsageResourceTest {
     private TransactionTemplateAsync clickHouseTemplate;
     private TransactionTemplate mySqlTemplate;
     private ExperimentResourceClient experimentResourceClient;
+    private UsageResourceClient usageResourceClient;
 
     @BeforeAll
     void setUpAll(ClientSupport client, TransactionTemplateAsync clickHouseTemplate,
@@ -116,6 +126,7 @@ class UsageResourceTest {
         ClientSupportUtils.config(client);
 
         this.experimentResourceClient = new ExperimentResourceClient(client, baseURI, factory);
+        this.usageResourceClient = new UsageResourceClient(client, baseURI);
     }
 
     @AfterAll
@@ -124,7 +135,11 @@ class UsageResourceTest {
     }
 
     private void mockTargetWorkspace(String apiKey, String workspaceName, String workspaceId) {
-        AuthTestUtils.mockTargetWorkspace(wireMock.server(), apiKey, workspaceName, workspaceId, USER);
+        mockTargetWorkspace(apiKey, workspaceName, workspaceId, USER);
+    }
+
+    private void mockTargetWorkspace(String apiKey, String workspaceName, String workspaceId, String user) {
+        AuthTestUtils.mockTargetWorkspace(wireMock.server(), apiKey, workspaceName, workspaceId, user);
     }
 
     @Nested
@@ -144,38 +159,34 @@ class UsageResourceTest {
 
             // Setup mock workspace with traces
             var workspaceId = UUID.randomUUID().toString();
-            var apikey = UUID.randomUUID().toString();
-            int tracesCount = setupEntitiesForWorkspace(workspaceId, apikey, traces,
+            var apikey = "apiKey-" + UUID.randomUUID();
+            var tracesCount = setupEntitiesForWorkspace(workspaceId, apikey, traces,
                     TRACE_RESOURCE_URL_TEMPLATE);
 
-            // Change created_at to the previous day in order to capture those traces in count query, since for Stripe we need to count it daily for yesterday
+            // Change created_at to the previous day in order to capture those traces in count query, since for usage billing we need to count it daily for yesterday
             subtractClickHouseTableRecordsCreatedAtOneDay("traces").accept(workspaceId);
 
             // Setup second workspace with traces, but leave created_at date set to today, so traces do not end up in the pool
             var workspaceIdForToday = UUID.randomUUID().toString();
-            var apikey2 = UUID.randomUUID().toString();
+            var apikey2 = "apiKey-" + UUID.randomUUID();
 
             setupEntitiesForWorkspace(workspaceIdForToday, apikey2, traces, TRACE_RESOURCE_URL_TEMPLATE);
 
-            try (var actualResponse = client.target(USAGE_RESOURCE_URL_TEMPLATE.formatted(baseURI))
-                    .path("/workspace-trace-counts")
-                    .request()
-                    .get()) {
+            var expectedTraceCount = TraceCountResponse.WorkspaceTraceCount.builder()
+                    .workspace(workspaceId)
+                    .traceCount(tracesCount)
+                    .build();
 
-                var response = validateResponse(actualResponse, TraceCountResponse.class);
+            var response = usageResourceClient.getWorkspaceTraceCounts();
 
-                var workspaceTraceCount = getMatch(response.workspacesTracesCount(),
-                        wtc -> wtc.workspace().equals(workspaceId));
+            var actualTraceCount = getMatch(response.workspacesTracesCount(),
+                    wtc -> wtc.workspace().equals(workspaceId));
+            assertThat(actualTraceCount).contains(expectedTraceCount);
 
-                assertThat(workspaceTraceCount).isPresent();
-                assertThat(workspaceTraceCount.get())
-                        .isEqualTo(new TraceCountResponse.WorkspaceTraceCount(workspaceId, tracesCount));
-
-                // Check that today's workspace is not returned
-                var workspaceTraceCountToday = getMatch(response.workspacesTracesCount(),
-                        wtc -> wtc.workspace().equals(workspaceIdForToday));
-                assertThat(workspaceTraceCountToday).isEmpty();
-            }
+            // Check that today's workspace is not returned
+            var actualTraceCountToday = getMatch(response.workspacesTracesCount(),
+                    wtc -> wtc.workspace().equals(workspaceIdForToday));
+            assertThat(actualTraceCountToday).isEmpty();
         }
 
         @Test
@@ -190,82 +201,73 @@ class UsageResourceTest {
 
             // Setup mock workspace with spans
             var workspaceId = UUID.randomUUID().toString();
-            var apiKey = UUID.randomUUID().toString();
-            int spansCount = setupEntitiesForWorkspace(workspaceId, apiKey, spans, SPANS_RESOURCE_URL_TEMPLATE);
+            var apiKey = "apiKey-" + UUID.randomUUID();
+            var spansCount = setupEntitiesForWorkspace(workspaceId, apiKey, spans, SPANS_RESOURCE_URL_TEMPLATE);
 
-            // Change created_at to the previous day in order to capture those spans in count query, since for Stripe we
-            // need to count it daily for yesterday
+            // Change created_at to the previous day in order to capture those spans in count query, since for usage
+            // billing we need to count it daily for yesterday
             subtractClickHouseTableRecordsCreatedAtOneDay("spans").accept(workspaceId);
 
             // Setup second workspace with spans, but leave created_at date set to today, so spans do not end up in the
             // pool
             var workspaceIdForToday = UUID.randomUUID().toString();
-            var apiKey2 = UUID.randomUUID().toString();
+            var apiKey2 = "apiKey-" + UUID.randomUUID();
 
             setupEntitiesForWorkspace(workspaceIdForToday, apiKey2, spans, SPANS_RESOURCE_URL_TEMPLATE);
 
-            try (var actualResponse = client.target(USAGE_RESOURCE_URL_TEMPLATE.formatted(baseURI))
-                    .path("/workspace-span-counts")
-                    .request()
-                    .get()) {
+            var expectedSpanCount = SpansCountResponse.WorkspaceSpansCount.builder()
+                    .workspace(workspaceId)
+                    .spanCount(spansCount)
+                    .build();
 
-                var response = validateResponse(actualResponse, SpansCountResponse.class);
+            var response = usageResourceClient.getWorkspaceSpanCounts();
 
-                var workspaceSpanCount = getMatch(response.workspacesSpansCount(),
-                        workspaceCount -> workspaceCount.workspace().equals(workspaceId));
+            var actualSpanCount = getMatch(response.workspacesSpansCount(),
+                    workspaceCount -> workspaceCount.workspace().equals(workspaceId));
+            assertThat(actualSpanCount).contains(expectedSpanCount);
 
-                assertThat(workspaceSpanCount).isPresent();
-                assertThat(workspaceSpanCount.get())
-                        .isEqualTo(new SpansCountResponse.WorkspaceSpansCount(workspaceId, spansCount));
-
-                // Check that today's workspace is not returned
-                var workspaceSpanCountToday = getMatch(response.workspacesSpansCount(),
-                        workspaceCount -> workspaceCount.workspace().equals(workspaceIdForToday));
-                assertThat(workspaceSpanCountToday).isEmpty();
-            }
+            // Check that today's workspace is not returned
+            var actualSpanCountToday = getMatch(response.workspacesSpansCount(),
+                    workspaceCount -> workspaceCount.workspace().equals(workspaceIdForToday));
+            assertThat(actualSpanCountToday).isEmpty();
         }
 
         @Test
         @DisplayName("Get span usage breakdown by workspace, project and user for previous day")
         void spanBreakdownForWorkspace() {
-            var projectName = "breakdown-%s".formatted(UUID.randomUUID());
+            var projectName = "breakdown-%s".formatted(ID_GENERATOR.generateId());
             var spans = PodamFactoryUtils.manufacturePojoList(factory, Span.class)
                     .stream()
                     .map(span -> span.toBuilder().id(null).projectName(projectName).build())
                     .toList();
 
             var workspaceId = UUID.randomUUID().toString();
-            var apiKey = UUID.randomUUID().toString();
-            int spansCount = setupEntitiesForWorkspace(workspaceId, apiKey, spans, SPANS_RESOURCE_URL_TEMPLATE);
+            var apiKey = "apiKey-" + UUID.randomUUID();
+            var spansCount = setupEntitiesForWorkspace(workspaceId, apiKey, spans, SPANS_RESOURCE_URL_TEMPLATE);
             // Backdate to the previous day so the rows land in the yesterday window of the count query
             subtractClickHouseTableRecordsCreatedAtOneDay("spans").accept(workspaceId);
 
             // Spans left at today in another workspace must be excluded
             var workspaceIdForToday = UUID.randomUUID().toString();
-            setupEntitiesForWorkspace(workspaceIdForToday, UUID.randomUUID().toString(), spans,
+            setupEntitiesForWorkspace(workspaceIdForToday, "apiKey-" + UUID.randomUUID(), spans,
                     SPANS_RESOURCE_URL_TEMPLATE);
 
-            try (var actualResponse = client.target(USAGE_RESOURCE_URL_TEMPLATE.formatted(baseURI))
-                    .path("/workspace-span-counts-breakdown")
-                    .request()
-                    .get()) {
+            var response = usageResourceClient.getWorkspaceSpanCountsBreakdown();
 
-                var response = validateResponse(actualResponse, UsageByWorkspaceProjectUserResponse.class);
+            var actualRows = response.breakdown().stream()
+                    .filter(row -> row.workspaceId().equals(workspaceId))
+                    .toList();
 
-                var rows = response.breakdown().stream()
-                        .filter(row -> row.workspaceId().equals(workspaceId))
-                        .toList();
+            // All spans share one project and one user, so a single breakdown row is expected. The project id is
+            // assigned by the backend, so it is asserted as present rather than compared.
+            assertThat(actualRows).hasSize(1);
+            var actualRow = actualRows.getFirst();
+            assertThat(actualRow.user()).isEqualTo(USER);
+            assertThat(actualRow.count()).isEqualTo(spansCount);
+            assertThat(actualRow.projectId()).isNotNull();
 
-                // All spans share one project and one user, so a single breakdown row is expected
-                assertThat(rows).hasSize(1);
-                var row = rows.get(0);
-                assertThat(row.user()).isEqualTo(USER);
-                assertThat(row.count()).isEqualTo(spansCount);
-                assertThat(row.projectId()).isNotNull();
-
-                assertThat(response.breakdown())
-                        .noneMatch(r -> r.workspaceId().equals(workspaceIdForToday));
-            }
+            assertThat(response.breakdown())
+                    .noneMatch(r -> r.workspaceId().equals(workspaceIdForToday));
         }
 
         @Test
@@ -318,270 +320,265 @@ class UsageResourceTest {
                 Consumer<String> decreaseTableRecordsCreatedAt) {
             // Setup mock workspace with corresponding entities
             var workspaceId = UUID.randomUUID().toString();
-            var apikey = UUID.randomUUID().toString();
-            int entitiesCount = setupEntitiesForWorkspace(workspaceId, apikey, entities,
+            var apikey = "apiKey-" + UUID.randomUUID();
+            var entitiesCount = setupEntitiesForWorkspace(workspaceId, apikey, entities,
                     resourseUri);
 
             // Change created_at to the previous day in order to capture those entities in count query, since for BI events we need to count it daily for yesterday
             decreaseTableRecordsCreatedAt.accept(workspaceId);
 
-            await().atMost(10, SECONDS).until(() -> {
-                try (var actualResponse = client.target(USAGE_RESOURCE_URL_TEMPLATE.formatted(baseURI))
-                        .path("bi-%s".formatted(biType))
-                        .request()
-                        .get()) {
-
-                    var response = validateResponse(actualResponse, BiInformationResponse.class);
-                    var biInformation = getMatch(response.biInformation(),
-                            biInfo -> biInfo.workspaceId().equals(workspaceId));
-
-                    return biInformation
-                            .map(biInfo -> biInfo
-                                    .equals(BiInformationResponse.BiInformation.builder()
-                                            .workspaceId(workspaceId)
-                                            .user(USER)
-                                            .count(entitiesCount)
-                                            .build()))
-                            .orElse(false);
-                }
-            });
-        }
-
-        @Test
-        @DisplayName("Get traces count excluding demo data projects")
-        void tracesCountExcludingDemoData() {
-            var regularTraces = PodamFactoryUtils.manufacturePojoList(factory, Trace.class)
-                    .stream()
-                    .map(e -> e.toBuilder()
-                            .id(null)
-                            .projectName("Regular Project") // Non-demo project
-                            .build())
-                    .toList();
-
-            var demoTraces = PodamFactoryUtils.manufacturePojoList(factory, Trace.class)
-                    .stream()
-                    .map(e -> e.toBuilder()
-                            .id(null)
-                            .projectName(DemoData.PROJECTS.get(0)) // Demo project name
-                            .build())
-                    .toList();
-
-            // Setup workspace with both regular and demo traces
-            var workspaceId = UUID.randomUUID().toString();
-            var apiKey = UUID.randomUUID().toString();
-            var workspaceName = UUID.randomUUID().toString();
-            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
-
-            // Create both regular and demo traces
-            regularTraces.forEach(trace -> createEntity(trace, apiKey, workspaceName, TRACE_RESOURCE_URL_TEMPLATE));
-            demoTraces.forEach(trace -> createEntity(trace, apiKey, workspaceName, TRACE_RESOURCE_URL_TEMPLATE));
-
-            // Change created_at to the previous day to capture in usage query
-            subtractClickHouseTableRecordsCreatedAtOneDay("traces").accept(workspaceId);
-
-            await().atMost(10, SECONDS).until(() -> {
-                try (var actualResponse = client.target(USAGE_RESOURCE_URL_TEMPLATE.formatted(baseURI))
-                        .path("workspace-trace-counts")
-                        .request()
-                        .get()) {
-
-                    var response = validateResponse(actualResponse, TraceCountResponse.class);
-                    var traceCount = getMatch(response.workspacesTracesCount(),
-                            traceInfo -> traceInfo.workspace().equals(workspaceId));
-
-                    // Should only count regular traces, not demo traces
-                    return traceCount
-                            .map(info -> info.traceCount() == regularTraces.size())
-                            .orElse(false);
-                }
-            });
+            awaitBiInformation(biType, workspaceId, entitiesCount);
         }
 
         @Test
         @DisplayName("Get spans count excluding demo data projects")
         void spansCountExcludingDemoData() {
-            var regularSpans = PodamFactoryUtils.manufacturePojoList(factory, Span.class)
-                    .stream()
-                    .map(e -> e.toBuilder()
-                            .id(null)
-                            .projectName("Regular Project") // Non-demo project
-                            .build())
-                    .toList();
-
-            var demoSpans = PodamFactoryUtils.manufacturePojoList(factory, Span.class)
-                    .stream()
-                    .map(e -> e.toBuilder()
-                            .id(null)
-                            .projectName(DemoData.PROJECTS.get(1)) // Demo project name
-                            .build())
-                    .toList();
+            var regularSpans = spansInProject("project-" + ID_GENERATOR.generateId());
+            var demoSpans = spansInProject(DemoData.PROJECTS.get(1));
 
             // Setup workspace with both regular and demo spans
             var workspaceId = UUID.randomUUID().toString();
-            var apiKey = UUID.randomUUID().toString();
-            var workspaceName = UUID.randomUUID().toString();
+            var apiKey = "apiKey-" + UUID.randomUUID();
+            var workspaceName = "test-workspace-" + UUID.randomUUID();
             mockTargetWorkspace(apiKey, workspaceName, workspaceId);
 
-            // Create both regular and demo spans
-            regularSpans.forEach(span -> createEntity(span, apiKey, workspaceName, SPANS_RESOURCE_URL_TEMPLATE));
-            demoSpans.forEach(span -> createEntity(span, apiKey, workspaceName, SPANS_RESOURCE_URL_TEMPLATE));
+            createSpans(concat(regularSpans, demoSpans), apiKey, workspaceName);
 
             // Change created_at to the previous day to capture in usage query
             subtractClickHouseTableRecordsCreatedAtOneDay("spans").accept(workspaceId);
 
-            await().atMost(10, SECONDS).until(() -> {
-                try (var actualResponse = client.target(USAGE_RESOURCE_URL_TEMPLATE.formatted(baseURI))
-                        .path("workspace-span-counts")
-                        .request()
-                        .get()) {
-
-                    var response = validateResponse(actualResponse, SpansCountResponse.class);
-                    var spanCount = getMatch(response.workspacesSpansCount(),
-                            spanInfo -> spanInfo.workspace().equals(workspaceId));
-
-                    // Should only count regular spans, not demo spans
-                    return spanCount
-                            .map(info -> info.spanCount() == regularSpans.size())
-                            .orElse(false);
-                }
-            });
+            // Should only count regular spans, not demo spans
+            awaitSpanCount(workspaceId, regularSpans.size());
         }
 
         @Test
         @DisplayName("Span count includes activity in demo projects created after the demo cutoff")
         void spansCountIncludesPostCutoffActivityInDemoProjects() {
-            var demoSpans = PodamFactoryUtils.manufacturePojoList(factory, Span.class)
-                    .stream()
-                    .map(e -> e.toBuilder()
-                            .id(null)
-                            .projectName(DemoData.PROJECTS.get(0))
-                            .build())
-                    .toList();
+            var demoSpans = spansInProject(DemoData.PROJECTS.getFirst());
 
             var workspaceId = UUID.randomUUID().toString();
-            var apiKey = UUID.randomUUID().toString();
-            var workspaceName = UUID.randomUUID().toString();
+            var apiKey = "apiKey-" + UUID.randomUUID();
+            var workspaceName = "test-workspace-" + UUID.randomUUID();
             mockTargetWorkspace(apiKey, workspaceName, workspaceId);
 
-            demoSpans.forEach(span -> createEntity(span, apiKey, workspaceName, SPANS_RESOURCE_URL_TEMPLATE));
+            createSpans(demoSpans, apiKey, workspaceName);
 
             // Project created today → cutoff = today + 1 min, in the future. Push the project two days back so
             // cutoff lands ~2 days ago, then move spans to yesterday — they end up post-cutoff and must be counted.
             backdateDemoProjectsCreatedAtTwoDays();
             subtractClickHouseTableRecordsCreatedAtOneDay("spans").accept(workspaceId);
 
-            await().atMost(10, SECONDS).until(() -> {
-                try (var actualResponse = client.target(USAGE_RESOURCE_URL_TEMPLATE.formatted(baseURI))
-                        .path("workspace-span-counts")
-                        .request()
-                        .get()) {
-
-                    var response = validateResponse(actualResponse, SpansCountResponse.class);
-                    var spanCount = getMatch(response.workspacesSpansCount(),
-                            spanInfo -> spanInfo.workspace().equals(workspaceId));
-
-                    return spanCount
-                            .map(info -> info.spanCount() == demoSpans.size())
-                            .orElse(false);
-                }
-            });
+            awaitSpanCount(workspaceId, demoSpans.size());
         }
 
-        @Test
-        @DisplayName("Trace count includes activity in demo projects created after the demo cutoff")
-        void tracesCountIncludesPostCutoffActivityInDemoProjects() {
-            var demoTraces = PodamFactoryUtils.manufacturePojoList(factory, Trace.class)
-                    .stream()
-                    .map(e -> e.toBuilder()
-                            .id(null)
-                            .projectName(DemoData.PROJECTS.get(0))
-                            .build())
-                    .toList();
+        /** Demo-project activity is excluded whether the workspace touched one demo project or every one of them. */
+        @ParameterizedTest
+        @MethodSource
+        void tracesCountExcludesDemoProjects(List<String> demoProjectNames) {
+            var regularTraces = tracesInProjects("project-" + ID_GENERATOR.generateId());
+            var demoTraces = tracesInProjects(demoProjectNames.toArray(String[]::new));
 
             var workspaceId = UUID.randomUUID().toString();
-            var apiKey = UUID.randomUUID().toString();
-            var workspaceName = UUID.randomUUID().toString();
+            var apiKey = "apiKey-" + UUID.randomUUID();
+            var workspaceName = "test-workspace-" + UUID.randomUUID();
             mockTargetWorkspace(apiKey, workspaceName, workspaceId);
 
-            demoTraces.forEach(trace -> createEntity(trace, apiKey, workspaceName, TRACE_RESOURCE_URL_TEMPLATE));
-
-            backdateDemoProjectsCreatedAtTwoDays();
-            subtractClickHouseTableRecordsCreatedAtOneDay("traces").accept(workspaceId);
-
-            await().atMost(10, SECONDS).until(() -> {
-                try (var actualResponse = client.target(USAGE_RESOURCE_URL_TEMPLATE.formatted(baseURI))
-                        .path("workspace-trace-counts")
-                        .request()
-                        .get()) {
-
-                    var response = validateResponse(actualResponse, TraceCountResponse.class);
-                    var traceCount = getMatch(response.workspacesTracesCount(),
-                            traceInfo -> traceInfo.workspace().equals(workspaceId));
-
-                    return traceCount
-                            .map(info -> info.traceCount() == demoTraces.size())
-                            .orElse(false);
-                }
-            });
-        }
-
-        @Test
-        @DisplayName("Mixed workspace with demo and regular data - only regular data counted")
-        void mixedWorkspaceExcludesDemoData() {
-            var regularTraces = PodamFactoryUtils.manufacturePojoList(factory, Trace.class)
-                    .stream()
-                    .limit(3)
-                    .map(e -> e.toBuilder()
-                            .id(null)
-                            .projectName("Production Project")
-                            .build())
-                    .toList();
-
-            var multiDemoTraces = DemoData.PROJECTS.stream()
-                    .flatMap(projectName -> PodamFactoryUtils.manufacturePojoList(factory, Trace.class)
-                            .stream()
-                            .limit(2)
-                            .map(e -> e.toBuilder()
-                                    .id(null)
-                                    .projectName(projectName)
-                                    .build()))
-                    .toList();
-
-            // Setup workspace
-            var workspaceId = UUID.randomUUID().toString();
-            var apiKey = UUID.randomUUID().toString();
-            var workspaceName = UUID.randomUUID().toString();
-            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
-
-            // Create all traces (regular + demo)
-            regularTraces.forEach(trace -> createEntity(trace, apiKey, workspaceName, TRACE_RESOURCE_URL_TEMPLATE));
-            multiDemoTraces.forEach(trace -> createEntity(trace, apiKey, workspaceName, TRACE_RESOURCE_URL_TEMPLATE));
+            createTraces(concat(regularTraces, demoTraces), apiKey, workspaceName);
 
             // Change created_at to the previous day to capture in usage query
             subtractClickHouseTableRecordsCreatedAtOneDay("traces").accept(workspaceId);
 
-            await().atMost(10, SECONDS).until(() -> {
-                try (var actualResponse = client.target(USAGE_RESOURCE_URL_TEMPLATE.formatted(baseURI))
-                        .path("workspace-trace-counts")
-                        .request()
-                        .get()) {
+            awaitTraceCount(workspaceId, regularTraces.size());
+        }
 
-                    var response = validateResponse(actualResponse, TraceCountResponse.class);
-                    var traceCount = getMatch(response.workspacesTracesCount(),
-                            traceInfo -> traceInfo.workspace().equals(workspaceId));
+        private Stream<Arguments> tracesCountExcludesDemoProjects() {
+            return Stream.of(
+                    arguments(named("a demo project", List.of(DemoData.PROJECTS.getFirst()))),
+                    arguments(named("every demo project", DemoData.PROJECTS)));
+        }
 
-                    // Should only count regular traces (3), not demo traces (10 total from 5 projects * 2 traces each)
-                    return traceCount
-                            .map(info -> info.traceCount() == regularTraces.size())
-                            .orElse(false);
-                }
+        /**
+         * The case whose behaviour changed, kept separate because the cutoff move is what it is about. The trace
+         * exclusion used to carry an {@code OR created_at > demoDataCreatedAt} branch, which counted activity in a
+         * demo project once that project predated the cutoff — what
+         * {@link #spansCountIncludesPostCutoffActivityInDemoProjects()} still pins for spans. That branch cannot
+         * match where demo projects are created continuously, since the cutoff is then effectively now, and it only
+         * existed alongside the inlined project-id literal the trace usage queries no longer carry.
+         */
+        @Test
+        void tracesCountExcludesDemoProjectsPredatingTheDemoCutoff() {
+            var regularTraces = tracesInProjects("project-" + ID_GENERATOR.generateId());
+            var demoTraces = tracesInProjects(DemoData.PROJECTS.getFirst());
+
+            var workspaceId = UUID.randomUUID().toString();
+            var apiKey = "apiKey-" + UUID.randomUUID();
+            var workspaceName = "test-workspace-" + UUID.randomUUID();
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
+
+            createTraces(concat(regularTraces, demoTraces), apiKey, workspaceName);
+
+            // Moves demo project creation before the window, where the removed OR branch would have counted it
+            backdateDemoProjectsCreatedAtTwoDays();
+            // Change created_at to the previous day to capture in usage query. Waiting on the regular count keeps
+            // the assertion from passing on an unfinished mutation.
+            subtractClickHouseTableRecordsCreatedAtOneDay("traces").accept(workspaceId);
+
+            awaitTraceCount(workspaceId, regularTraces.size());
+        }
+
+        /**
+         * The per-workspace count is folded from per-project rows, so a workspace spanning several projects has to
+         * sum back to the total the workspace-grouped query returned.
+         */
+        @Test
+        void tracesCountSumsAWorkspacesProjectsIntoOneRow() {
+            var traces = tracesInProjects("project-" + ID_GENERATOR.generateId(),
+                    "project-" + ID_GENERATOR.generateId());
+
+            var workspaceId = UUID.randomUUID().toString();
+            var apiKey = "apiKey-" + UUID.randomUUID();
+            var workspaceName = "test-workspace-" + UUID.randomUUID();
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
+
+            createTraces(traces, apiKey, workspaceName);
+
+            subtractClickHouseTableRecordsCreatedAtOneDay("traces").accept(workspaceId);
+
+            awaitTraceCount(workspaceId, traces.size());
+        }
+
+        /**
+         * The BI fold, which re-aggregates the per-project rows by workspace and user. One user across two regular
+         * projects plus a demo project must come back as a single row counting only the regular projects, so losing
+         * the exclusion and losing the re-aggregation are both caught.
+         */
+        @Test
+        void traceBiInfoSumsAUsersProjectsAndExcludesDemoProjects() {
+            var regularTraces = tracesInProjects("project-" + ID_GENERATOR.generateId(),
+                    "project-" + ID_GENERATOR.generateId());
+            var demoTraces = tracesInProjects(DemoData.PROJECTS.get(2));
+
+            var workspaceId = UUID.randomUUID().toString();
+            var apiKey = "apiKey-" + UUID.randomUUID();
+            var workspaceName = "test-workspace-" + UUID.randomUUID();
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
+
+            createTraces(concat(regularTraces, demoTraces), apiKey, workspaceName);
+
+            subtractClickHouseTableRecordsCreatedAtOneDay("traces").accept(workspaceId);
+
+            awaitBiInformation("traces", workspaceId, regularTraces.size());
+        }
+
+        /**
+         * The BI fold keys on workspace and user, so two users in one workspace have to come back as two rows.
+         * Every other test here runs as a single user, and collapsing the two would misreport both.
+         */
+        @Test
+        void traceBiInfoKeepsUsersInTheSameWorkspaceApart() {
+            var workspaceId = UUID.randomUUID().toString();
+            var workspaceName = "test-workspace-" + UUID.randomUUID();
+            var apiKey = "apiKey-" + UUID.randomUUID();
+            var otherApiKey = "apiKey-" + UUID.randomUUID();
+            var otherUser = "user-" + UUID.randomUUID();
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
+            mockTargetWorkspace(otherApiKey, workspaceName, workspaceId, otherUser);
+
+            var traces = tracesInProjects("project-" + ID_GENERATOR.generateId());
+            var otherUserTraces = tracesInProjects("project-" + ID_GENERATOR.generateId());
+            createTraces(traces, apiKey, workspaceName);
+            createTraces(otherUserTraces, otherApiKey, workspaceName);
+
+            subtractClickHouseTableRecordsCreatedAtOneDay("traces").accept(workspaceId);
+
+            awaitBiInformation("traces", workspaceId,
+                    BiInformationResponse.BiInformation.builder()
+                            .workspaceId(workspaceId)
+                            .user(USER)
+                            .count(traces.size())
+                            .build(),
+                    BiInformationResponse.BiInformation.builder()
+                            .workspaceId(workspaceId)
+                            .user(otherUser)
+                            .count(otherUserTraces.size())
+                            .build());
+        }
+
+        private List<Trace> tracesInProjects(String... projectNames) {
+            return Arrays.stream(projectNames)
+                    .flatMap(projectName -> PodamFactoryUtils.manufacturePojoList(factory, Trace.class)
+                            .stream()
+                            .map(trace -> trace.toBuilder().id(null).projectName(projectName).build()))
+                    .toList();
+        }
+
+        private List<Span> spansInProject(String projectName) {
+            return PodamFactoryUtils.manufacturePojoList(factory, Span.class)
+                    .stream()
+                    .map(span -> span.toBuilder().id(null).projectName(projectName).build())
+                    .toList();
+        }
+
+        private <T> List<T> concat(List<T> first, List<T> second) {
+            return Stream.concat(first.stream(), second.stream()).toList();
+        }
+
+        private void createTraces(List<Trace> traces, String apiKey, String workspaceName) {
+            traces.forEach(trace -> createEntity(trace, apiKey, workspaceName, TRACE_RESOURCE_URL_TEMPLATE));
+        }
+
+        private void createSpans(List<Span> spans, String apiKey, String workspaceName) {
+            spans.forEach(span -> createEntity(span, apiKey, workspaceName, SPANS_RESOURCE_URL_TEMPLATE));
+        }
+
+        private void awaitTraceCount(String workspaceId, int expectedCount) {
+            var expectedTraceCount = TraceCountResponse.WorkspaceTraceCount.builder()
+                    .workspace(workspaceId)
+                    .traceCount(expectedCount)
+                    .build();
+            await().atMost(10, SECONDS).untilAsserted(() -> {
+                var actualTraceCount = getMatch(usageResourceClient.getWorkspaceTraceCounts().workspacesTracesCount(),
+                        traceCount -> traceCount.workspace().equals(workspaceId));
+                assertThat(actualTraceCount).contains(expectedTraceCount);
+            });
+        }
+
+        private void awaitSpanCount(String workspaceId, int expectedCount) {
+            var expectedSpanCount = SpansCountResponse.WorkspaceSpansCount.builder()
+                    .workspace(workspaceId)
+                    .spanCount(expectedCount)
+                    .build();
+            await().atMost(10, SECONDS).untilAsserted(() -> {
+                var actualSpanCount = getMatch(usageResourceClient.getWorkspaceSpanCounts().workspacesSpansCount(),
+                        spanCount -> spanCount.workspace().equals(workspaceId));
+                assertThat(actualSpanCount).contains(expectedSpanCount);
+            });
+        }
+
+        private void awaitBiInformation(String entityType, String workspaceId, int expectedCount) {
+            awaitBiInformation(entityType, workspaceId, BiInformationResponse.BiInformation.builder()
+                    .workspaceId(workspaceId)
+                    .user(USER)
+                    .count(expectedCount)
+                    .build());
+        }
+
+        private void awaitBiInformation(String entityType, String workspaceId,
+                BiInformationResponse.BiInformation... expectedBiInformation) {
+            await().atMost(10, SECONDS).untilAsserted(() -> {
+                var actualBiInformation = usageResourceClient.getBiInformation(entityType)
+                        .biInformation()
+                        .stream()
+                        .filter(biInfo -> biInfo.workspaceId().equals(workspaceId))
+                        .toList();
+                assertThat(actualBiInformation).containsExactlyInAnyOrder(expectedBiInformation);
             });
         }
     }
 
     private <T> int setupEntitiesForWorkspace(String workspaceId, String okApikey, List<T> entities,
             String resourseUri) {
-        String workspaceName = UUID.randomUUID().toString();
+        var workspaceName = "test-workspace-" + UUID.randomUUID();
         mockTargetWorkspace(okApikey, workspaceName, workspaceId);
 
         entities.forEach(entity -> createEntity(entity, okApikey, workspaceName, resourseUri));
@@ -605,13 +602,6 @@ class UsageResourceTest {
         return list.stream()
                 .filter(predicate)
                 .findFirst();
-    }
-
-    private <T> T validateResponse(Response response, Class<T> entityType) {
-        assertThat(response.getStatusInfo().getStatusCode()).isEqualTo(200);
-        assertThat(response.hasEntity()).isTrue();
-
-        return response.readEntity(entityType);
     }
 
     private Consumer<String> subtractClickHouseTableRecordsCreatedAtOneDay(String table) {
@@ -645,7 +635,7 @@ class UsageResourceTest {
         // Push demo-named project creation timestamps far enough into the past that the
         // computed demoDataCreatedAt cutoff (= max(project.created_at) + 1 min) precedes
         // spans/traces backdated to yesterday — exercising the `OR created_at > cutoff`
-        // branch of the rewritten exclusion predicate. The service resolves demo projects
+        // branch of the span exclusion predicate. The service resolves demo projects
         // by global name across all workspaces, so the update must span workspaces too.
         mySqlTemplate.inTransaction(WRITE, handle -> {
             handle.createUpdate(
